--- a/style.css
+++ b/style.css
@@ -19,9 +19,21 @@ main{
     
 
 }
+.overlay{
+     height: 100%;
+     width: 100%;
+     background-color: rgba(26, 17, 17, 0.774);
+}
+
+
+
+
 h1{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+
+    font-family: Hongbin;
+    color: white;
 }
